--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
             <section class="features section container" >
                 <h2 class="visually-hidden">Особенности</h2>
                     <ul class="features-list list">
-                        <li class="item">
+                        <li class="item icon-group">
                             <h3 class="title">Внимание к деталям</h3>
                             <p class="desc">Идейные соображения, а также начало повседневной
                             работы по формированию позиции.</p>
                         </li>
-                        <li class="item">
+                        <li class="item icon-clock">
                             <h3 class="title">Пунктуальность</h3>
                             <p class="desc">Задача организации, в особенности же рамки и 
                             место обучения кадров влечет за собой.</p>
                         </li>
-                        <li class="item">
+                        <li class="item icon-diagram">
                             <h3 class="title">Планирование</h3>
                             <p class="desc">Равным образом консультация с широким активом
                             в значительной степени обуславливает.</p>
                         </li>
-                        <li class="item">
+                        <li class="item icon-astronaut">
                             <h3 class="title">Современные технологии</h3>
                             <p class="desc">Значимость этих проблем настолько очевидна, 
                             что реализация плановых заданий.</p>
