добавлены тени ховеры в портфолио

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="" class="button cursor">Заказать услугу</a>
             </section>
 
-            <!-- Особенности -->
+        <!-- Особенности -->
             <section class="features section container" >
                 <h2 class="visually-hidden">Особенности</h2>
                     <ul class="features-list list">
@@ -105,6 +105,12 @@
                             <div class="content">
                                 <h3 class="name">Игорь Демьяненко</h3>
                                 <p class="position">Product Designer</p>
+                                <ul class="actions list">
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                    <li></li>
+                                </ul>
                             </div>
                         </li>
                         <li class="item">
@@ -132,6 +138,20 @@
                         </li>
                     </ul>
                </div>
+            </section>
+
+            <!-- Клиенты -->
+            <section class="clients section">
+                <h2 class="section-title">Постоянные клиенты</h2>
+                <div class="container">
+                    <ul class="clients-list list">
+                        <li class="item">
+                            <div>
+                                
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </section>
     </main>
     
