частично сделана секция клиент

--- a/index.html
+++ b/index.html
@@ -147,7 +147,9 @@
                     <ul class="clients-list list">
                         <li class="item">
                             <div>
-                                
+                                <svg>
+                                    <use href=""></use>
+                                </svg> 
                             </div>
                         </li>
                     </ul>
