скопирован футер в портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -148,22 +148,67 @@
 
 <!-- подвал страницы -->
 <footer class="footer">
-    <div class="container footer-section">
-        <a href="index.html" class="footer-logo">
-            <p> <span class="accent">Web</span>Studio</p>
-        </a>
-
-        <div>
+    <div class="container">
+        <div class="footer-section">
+            <a href="index.html" class="footer-logo">
+                <p> <span class="accent">Web</span>Studio</p>
+            </a>
             <address class="adress">
                 <!-- <p>г. Киев, пр-т Леси Украинки,26</p> -->
                 <ul class="adress-list list">
                     <li class="item"><a href="" class="footer-link">г. Киев, пр-т Леси Украинки,26</a></li>
-                    <li class="item"><a href="mailto:info@example.com" class="footer-link ">info@example.com</a></li>
-                    <li class="item"><a href="tel:+380991111111" class="footer-link ">+38 099 111 11 11</a></li>
+                    <li class="item"><a href="mailto:info@example.com" class="footer-link mail">info@example.com</a>
+                    </li>
+                    <li class="item"><a href="tel:+380991111111" class="footer-link tel">+38 099 111 11 11</a></li>
                 </ul>
             </address>
         </div>
-    </div>
+
+
+        <div class="footer-wrapper">
+            <p class="invite">присоединяйтесь</p>
+            <ul class="icon-list list">
+                <li class="icon-items">
+                    <a href="" class="icon-link">
+                        <div class="icons-group">
+                            <svg class="footer-icons" width="20" height="20">
+                                <use href="./images/sprite.svg#instagram"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="icon-items">
+                    <a href="" class="icon-link">
+                        <div class="icons-group">
+                            <svg class="footer-icons" width="20" height="20">
+                                <use href="./images/sprite.svg#twitter"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="icon-items">
+                    <a href="" class="icon-link">
+                        <div class="icons-group">
+                            <svg class="footer-icons" width="20" height="20">
+                                <use href="./images/sprite.svg#facebook"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+
+                <li class="icon-items">
+                    <a href="" class="icon-link">
+                        <div class="icons-group">
+                            <svg class="footer-icons" width="20" height="20">
+                                <use href="./images/sprite.svg#linkedin"></use>
+                            </svg>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </div>
 </footer>
 
 </body>
