--- a/index.html
+++ b/index.html
@@ -463,6 +463,7 @@
                         </a>
                     </li>
                 </ul>
+            </div>
         </div>
     </footer>
 
